# newgl

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  build.bat  build.sh
demo/include/demo/: custom_event.h  demo_controller.h
demo/include/demo/attributes/: basic_motion.h  capture_framerate.h  first_person_camera.h  grab_input.h  material_adapter.h  movement_controller.h  toggle_cursor.h  toggle_wireframe.h
demo/include/demo/layers/: material_editor.h
demo/resources/shaders/: phong.f.glsl  phong.v.glsl  phong_instance.v.glsl  sky.f.glsl  sky.v.glsl  text.v.glsl
demo/src/: CMakeLists.txt  demo_controller.cpp  main.cpp
demo/src/attributes/: basic_motion.cpp  capture_framerate.cpp  first_person_camera.cpp  grab_input.cpp  material_adapter.cpp  movement_controller.cpp  toggle_cursor.cpp  toggle_wireframe.cpp
demo/src/layers/: material_editor.cpp
engine/: CMakeLists.txt
engine/glad/include/glad/: glad.h
engine/glad/src/: CMakeLists.txt
engine/include/engine/: application.h  attribute.h  common.h  controller.h  event.h  global.h  layer.h  light.h  map.h  material.h  mesh.h  safe_queue.h  shader.h  sky_layer.h  text_layer.h
engine/include/engine/attributes/: basic_motion.h  capture_framerate.h  first_person_camera.h
engine/include/engine/layers/: entity_layer.h  example_layer.h  imgui_layer.h  instance_layer.h  script_layer.h  sky_layer.h  text_layer.h
engine/src/: CMakeLists.txt  application.cpp  image.cpp  material.cpp  mesh.cpp  shader.cpp
engine/src/attributes/: basic_motion.cpp  capture_framerate.cpp  first_person_camera.cpp  toggle_wireframe.cpp
engine/src/layers/: entity_layer.cpp  example_layer.cpp  imgui_layer.cpp  instance_layer.cpp  script_layer.cpp  sky_layer.cpp  text_layer.cpp
glad/src/: CMakeLists.txt  glad.c
include/newgl/: common.h  engine.h  entity_layer.h  event.h  example_layer.h  global.h  image.h  layer.h  material.h  mesh.h  script_layer.h  shader.h  text_layer.h  window.h
include/newgl/attributes/: first_person_camera.h  test.h  toggle_wireframe.h
resources/shaders/: base.f.glsl  base.v.glsl  text.f.glsl  text.v.glsl
src/: CMakeLists.txt  engine.cpp  entity_layer.cpp  example_layer.cpp  image.cpp  main.cpp  material.cpp  mesh.cpp  script_layer.cpp  shader.cpp  sky_layer.cpp  text_layer.cpp  window.cpp
src/attributes/: basic_motion.cpp  capture_framerate.cpp  first_person_camera.cpp  test.cpp  toggle_wireframe.cpp
